Biased Spawn Showing Significant Promise

--- a/Further_testing/config.yaml
+++ b/Further_testing/config.yaml
@@ -14,7 +14,7 @@ experiment:
 
 # ===== Environment Configuration =====
 environment:
-  id: "MiniGrid-Empty-8x8-v0"  # Options: "MiniGrid-Empty-8x8-v0", "MiniGrid-LavaCrossingS9N1-v0"
+  id: "MiniGrid-LavaGapS7-v0"  # Options: "MiniGrid-Empty-8x8-v0", "MiniGrid-LavaCrossingS9N1-v0"
   num_envs: 15
   max_episode_steps: 150  # Maximum steps per episode (None = use env default)
   use_different_envs: true  # Enable diverse environments
