--- a/Further_testing/config.yaml
+++ b/Further_testing/config.yaml
@@ -195,7 +195,7 @@ evaluation:
   # During training
   training:
     num_envs: 15
-    check_freq: 10000
+    check_freq: 1_000_000
     target_reward_threshold: 2.0     # Unreachable target to disable early termination
     min_reward_threshold: -1.0       # Set to a very low value to disable early termination
     max_runtime: 0                   # 0 = no time limit (disable time-based termination)
