--- a/Further_testing/environment.yml
+++ b/Further_testing/environment.yml
@@ -1,66 +1,112 @@
 name: drl-scalpel
 channels:
+  - pytorch-nightly
   - defaults
 dependencies:
-  - defaults/osx-arm64::blas==1.0=openblas
-  - defaults/osx-arm64::bzip2==1.0.8=h80987f9_6
-  - defaults/osx-arm64::ca-certificates==2025.2.25=hca03da5_0
-  - defaults/osx-arm64::giflib==5.2.2=h80987f9_0
-  - defaults/osx-arm64::jpeg==9e=h80987f9_3
-  - defaults/osx-arm64::libcxx==14.0.6=h848a8c0_0
-  - defaults/osx-arm64::libdeflate==1.22=h80987f9_0
-  - defaults/osx-arm64::libffi==3.4.4=hca03da5_1
-  - defaults/osx-arm64::libjpeg-turbo==2.0.0=h1a28f6b_0
-  - defaults/osx-arm64::libwebp-base==1.3.2=h80987f9_1
-  - defaults/osx-arm64::llvm-openmp==14.0.6=hc6e5704_0
-  - defaults/osx-arm64::ncurses==6.4=h313beb8_0
-  - defaults/noarch::tzdata==2025a=h04d1e81_0
-  - defaults/osx-arm64::xz==5.6.4=h80987f9_1
-  - defaults/osx-arm64::yaml==0.2.5=h1a28f6b_0
-  - defaults/osx-arm64::zlib==1.2.13=h18a0788_1
-  - defaults/osx-arm64::gmp==6.3.0=h313beb8_0
-  - defaults/osx-arm64::lerc==4.0.0=h313beb8_0
-  - defaults/osx-arm64::libgfortran5==11.3.0=h009349e_28
-  - defaults/osx-arm64::libpng==1.6.39=h80987f9_0
-  - defaults/osx-arm64::lz4-c==1.9.4=h313beb8_1
-  - defaults/osx-arm64::openssl==3.0.16=h02f6b3c_0
-  - defaults/osx-arm64::readline==8.2=h1a28f6b_0
-  - defaults/osx-arm64::tk==8.6.14=h6ba3021_0
-  - defaults/osx-arm64::freetype==2.13.3=h47d26ad_0
-  - defaults/osx-arm64::libgfortran==5.0.0=11_3_0_hca03da5_28
-  - defaults/osx-arm64::mpfr==4.2.1=h80987f9_0
-  - defaults/osx-arm64::sqlite==3.45.3=h80987f9_0
-  - defaults/osx-arm64::zstd==1.5.6=hfb09047_0
-  - defaults/osx-arm64::libopenblas==0.3.21=h269037a_0
-  - defaults/osx-arm64::libtiff==4.7.0=h91aec0a_0
-  - defaults/osx-arm64::mpc==1.3.1=h80987f9_0
-  - defaults/osx-arm64::python==3.10.16=hb885b13_1
-  - defaults/osx-arm64::brotli-python==1.0.9=py310h313beb8_9
-  - defaults/osx-arm64::certifi==2025.4.26=py310hca03da5_0
-  - defaults/noarch::charset-normalizer==3.3.2=pyhd3eb1b0_0
-  - defaults/osx-arm64::filelock==3.17.0=py310hca03da5_0
-  - defaults/osx-arm64::gmpy2==2.2.1=py310h5c1b81f_0
-  - defaults/osx-arm64::idna==3.7=py310hca03da5_0
-  - defaults/osx-arm64::lcms2==2.16=he26ebf3_1
-  - defaults/osx-arm64::libwebp==1.3.2=hf40cdb4_1
-  - defaults/osx-arm64::markupsafe==3.0.2=py310h80987f9_0
-  - defaults/osx-arm64::mpmath==1.3.0=py310hca03da5_0
-  - defaults/osx-arm64::networkx==3.4.2=py310hca03da5_0
-  - defaults/osx-arm64::numpy-base==2.0.1=py310ha9811e2_1
-  - defaults/osx-arm64::openjpeg==2.5.2=hba36e21_1
-  - defaults/osx-arm64::pysocks==1.7.1=py310hca03da5_0
-  - defaults/osx-arm64::pyyaml==6.0.2=py310h80987f9_0
-  - defaults/osx-arm64::setuptools==75.8.0=py310hca03da5_0
-  - defaults/osx-arm64::typing_extensions==4.12.2=py310hca03da5_0
-  - defaults/osx-arm64::wheel==0.45.1=py310hca03da5_0
-  - defaults/osx-arm64::jinja2==3.1.6=py310hca03da5_0
-  - defaults/osx-arm64::numpy==2.0.1=py310h3b2db8e_1
-  - defaults/osx-arm64::pillow==11.1.0=py310h41ba818_1
-  - defaults/osx-arm64::pip==25.0=py310hca03da5_0
-  - defaults/osx-arm64::sympy==1.13.3=py310hca03da5_1
-  - defaults/osx-arm64::urllib3==2.3.0=py310hca03da5_0
-  - pytorch-nightly/osx-arm64::pytorch==2.6.0.dev20241112=py3.10_0
-  - defaults/osx-arm64::requests==2.32.3=py310hca03da5_1
-  - pytorch-nightly/osx-arm64::torchaudio==2.5.0.dev20241118=py310_cpu
-  - pytorch-nightly/osx-arm64::torchvision==0.20.0.dev20241118=py310_cpu
+  - blas=1.0=openblas
+  - brotli-python=1.0.9=py310h313beb8_9
+  - bzip2=1.0.8=h80987f9_6
+  - ca-certificates=2025.2.25=hca03da5_0
+  - certifi=2025.4.26=py310hca03da5_0
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - freetype=2.13.3=h47d26ad_0
+  - giflib=5.2.2=h80987f9_0
+  - gmp=6.3.0=h313beb8_0
+  - gmpy2=2.2.1=py310h5c1b81f_0
+  - idna=3.7=py310hca03da5_0
+  - jpeg=9e=h80987f9_3
+  - lcms2=2.16=he26ebf3_1
+  - lerc=4.0.0=h313beb8_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.22=h80987f9_0
+  - libffi=3.4.4=hca03da5_1
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libjpeg-turbo=2.0.0=h1a28f6b_0
+  - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h80987f9_0
+  - libtiff=4.7.0=h91aec0a_0
+  - libwebp=1.3.2=hf40cdb4_1
+  - libwebp-base=1.3.2=h80987f9_1
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - lz4-c=1.9.4=h313beb8_1
+  - mpc=1.3.1=h80987f9_0
+  - mpfr=4.2.1=h80987f9_0
+  - mpmath=1.3.0=py310hca03da5_0
+  - ncurses=6.4=h313beb8_0
+  - numpy-base=2.0.1=py310ha9811e2_1
+  - openjpeg=2.5.2=hba36e21_1
+  - openssl=3.0.16=h02f6b3c_0
+  - pip=25.0=py310hca03da5_0
+  - pysocks=1.7.1=py310hca03da5_0
+  - python=3.10.16=hb885b13_1
+  - pytorch=2.6.0.dev20241112=py3.10_0
+  - pyyaml=6.0.2=py310h80987f9_0
+  - readline=8.2=h1a28f6b_0
+  - requests=2.32.3=py310hca03da5_1
+  - setuptools=75.8.0=py310hca03da5_0
+  - sqlite=3.45.3=h80987f9_0
+  - tk=8.6.14=h6ba3021_0
+  - typing_extensions=4.12.2=py310hca03da5_0
+  - urllib3=2.3.0=py310hca03da5_0
+  - wheel=0.45.1=py310hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - yaml=0.2.5=h1a28f6b_0
+  - zlib=1.2.13=h18a0788_1
+  - zstd=1.5.6=hfb09047_0
+  - pip:
+      - absl-py==2.2.2
+      - alembic==1.15.2
+      - cloudpickle==3.1.1
+      - colorlog==6.9.0
+      - contourpy==1.3.1
+      - cycler==0.12.1
+      - decorator==5.2.1
+      - farama-notifications==0.0.4
+      - filelock==3.13.1
+      - fonttools==4.57.0
+      - fsspec==2024.6.1
+      - grpcio==1.71.0
+      - gym-notices==0.0.8
+      - gymnasium==0.28.1
+      - gymnasium-minigrid==0.0.5
+      - imageio==2.37.0
+      - imageio-ffmpeg==0.6.0
+      - jax-jumpy==1.0.0
+      - jinja2==3.1.4
+      - kiwisolver==1.4.8
+      - mako==1.3.10
+      - markdown==3.8
+      - markupsafe==2.1.5
+      - matplotlib==3.10.1
+      - minigrid==3.0.0
+      - moviepy==2.1.2
+      - networkx==3.3
+      - numpy==2.1.2
+      - opencv-python==4.11.0.86
+      - optuna==4.2.1
+      - packaging==24.2
+      - pandas==2.2.3
+      - pillow==10.4.0
+      - proglog==0.1.11
+      - protobuf==6.30.2
+      - pygame==2.1.3
+      - pyparsing==3.2.3
+      - python-dateutil==2.9.0.post0
+      - python-dotenv==1.1.0
+      - pytz==2025.2
+      - scipy==1.15.2
+      - seaborn==0.13.2
+      - six==1.17.0
+      - sqlalchemy==2.0.40
+      - stable-baselines3==2.6.0
+      - sympy==1.13.1
+      - tensorboard==2.19.0
+      - tensorboard-data-server==0.7.2
+      - torch==2.6.0
+      - torchaudio==2.6.0
+      - torchvision==0.21.0
+      - tqdm==4.67.1
+      - tzdata==2025.2
+      - werkzeug==3.1.3
 prefix: /Users/hamzahchariwala/anaconda3/envs/drl-scalpel
