--- a/Further_testing/environment.yml
+++ b/Further_testing/environment.yml
@@ -68,8 +68,8 @@ dependencies:
       - fsspec==2024.6.1
       - grpcio==1.71.0
       - gym-notices==0.0.8
-      - gymnasium==0.28.1
-      - gymnasium-minigrid==0.0.5
+      - gymnasium>=0.29.1
+      # - gymnasium-minigrid==0.0.5
       - imageio==2.37.0
       - imageio-ffmpeg==0.6.0
       - jax-jumpy==1.0.0
@@ -90,7 +90,7 @@ dependencies:
       - pillow==10.4.0
       - proglog==0.1.11
       - protobuf==6.30.2
-      - pygame==2.1.3
+      - pygame>=2.1.3
       - pyparsing==3.2.3
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.0
