--- a/Further_testing/config.yaml
+++ b/Further_testing/config.yaml
@@ -26,7 +26,10 @@ reward_function:
   x_intercept: 100  # Number of steps at which reward becomes approximately 0
   y_intercept: 50  # Initial reward value at step 0
   transition_width: 10  # Only used for sigmoid function
-  verbose: false  # Controls whether debug messages are printed to terminal
+  verbose: true  # Controls whether basic information is printed to terminal
+  debug_logging: false  # Controls whether detailed step-by-step logs are printed
+  count_lava_steps: true  # Whether to count lava steps with a penalty
+  lava_step_multiplier: 5.0  # How many regular steps one lava step is equivalent to
 
 # ===== Randomness Control =====
 seeds:
@@ -39,7 +42,7 @@ seeds:
 no_death:
   enabled: true
   types: ["lava"]
-  cost: -0.1       # Penalty for hitting death elements
+  cost: -0.0   # Penalty for hitting death elements
 
 # ===== Diagonal Movement =====
 diagonal_moves:
