--- a/Further_testing/config.yaml
+++ b/Further_testing/config.yaml
@@ -22,11 +22,11 @@ environment:
 # ===== Reward Function Configuration =====
 reward_function:
   enabled: true
-  type: "exponential"  # Options: "linear", "exponential", "sigmoid"
-  x_intercept: 75  # Number of steps at which reward becomes approximately 0
-  y_intercept: 10  # Initial reward value at step 0
+  type: "linear"  # Options: "linear", "exponential", "sigmoid"
+  x_intercept: 1  # Number of steps at which reward becomes approximately 0
+  y_intercept: 150  # Initial reward value at step 0
   transition_width: 10  # Only used for sigmoid function
-  verbose: true  # Controls whether basic information is printed to terminal
+  verbose: false  # Controls whether basic information is printed to terminal
   debug_logging: false  # Controls whether detailed step-by-step logs are printed
   count_lava_steps: true  # Whether to count lava steps with a penalty
   lava_step_multiplier: 5.0  # How many regular steps one lava step is equivalent to
@@ -40,7 +40,7 @@ seeds:
 
 # ===== Agent Safety Features =====
 no_death:
-  enabled: true
+  enabled: false
   types: ["lava"]
   cost: -0.0   # Penalty for hitting death elements
 
@@ -207,7 +207,7 @@ evaluation:
   # During training
   training:
     num_envs: 15
-    check_freq: 1_000_000
+    check_freq: 500_000       # Changed from 1_000_000 to 500_000 to get more evaluation points
     target_reward_threshold: 2.0     # Unreachable target to disable early termination
     min_reward_threshold: -1.0       # Set to a very low value to disable early termination
     max_runtime: 0                   # 0 = no time limit (disable time-based termination)
