--- a/Further_testing/Build_Files/environment.yml
+++ b/Further_testing/Build_Files/environment.yml
@@ -68,7 +68,8 @@ dependencies:
       - fsspec==2024.6.1
       - grpcio==1.71.0
       - gym-notices==0.0.8
-      - gymnasium==0.28.1
+      # - gymnasium==0.28.1
+      - gymnasium==0.29.1
       - imageio==2.37.0
       - imageio-ffmpeg==0.6.0
       - jax-jumpy==1.0.0
@@ -89,7 +90,8 @@ dependencies:
       - pillow==10.4.0
       - proglog==0.1.11
       - protobuf==6.30.2
-      - pygame==2.1.3
+      # - pygame==2.1.3
+      - pygame>=2.4.0
       - pyparsing==3.2.3
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.0
