Changed Training Params

--- a/Further_testing/Agent_Storage/LavaTests/Standard2/config.yaml
+++ b/Further_testing/Agent_Storage/LavaTests/Standard2/config.yaml
@@ -17,7 +17,7 @@ experiment:
     model_save_path: "default_agent"
     
     # Total timesteps remains important
-    total_timesteps: 5_000_000
+    total_timesteps: 25_000_000
 
 # ===== Environment Configuration =====
 environment:
@@ -47,9 +47,9 @@ seeds:
 
 # ===== Agent Safety Features =====
 no_death:
-  enabled: true
+  enabled: false
   types: ["lava"]
-  cost: -0.05   # Penalty for hitting death elements
+  cost: -0.025   # Penalty for hitting death elements
 
 # ===== Diagonal Movement =====
 diagonal_moves:
