--- a/Further_testing/Agent_Storage/SpawnTests/biased/config.yaml
+++ b/Further_testing/Agent_Storage/SpawnTests/biased/config.yaml
@@ -17,7 +17,7 @@ experiment:
     model_save_path: "default_agent"
     
     # Total timesteps remains important
-    total_timesteps: 10_000_000
+    total_timesteps: 5_000_000
 
 # ===== Environment Configuration =====
 environment:
@@ -35,7 +35,7 @@ reward_function:
   transition_width: 10  # Only used for sigmoid function
   verbose: false  # Controls whether basic information is printed to terminal
   debug_logging: false  # Controls whether detailed step-by-step logs are printed
-  count_lava_steps: true  # Whether to count lava steps with a penalty
+  count_lava_steps: false  # Whether to count lava steps with a penalty
   lava_step_multiplier: 5.0  # How many regular steps one lava step is equivalent to
 
 # ===== Randomness Control =====
@@ -47,9 +47,9 @@ seeds:
 
 # ===== Agent Safety Features =====
 no_death:
-  enabled: false
+  enabled: true
   types: ["lava"]
-  cost: -0.0   # Penalty for hitting death elements
+  cost: -0.1   # Penalty for hitting death elements
 
 # ===== Diagonal Movement =====
 diagonal_moves:
@@ -65,12 +65,12 @@ spawn:
   # Fixed distribution (used when stage_training and continuous_transition are disabled)
   distribution_type: "gaussian_2d"  # Options: "uniform", "gaussian_2d", "corners", "border", "composite"
   distribution_params:
-    center: [1.0, 1.0]  # Normalized coordinates [x, y] where (1,1) is bottom-right (goal)
-    std: [0.2, 0.2]     # Normalized standard deviations [σx, σy] in grid units
+    center: [0.0, 0.0]  # Normalized coordinates [x, y] where (0,0) is top-left
+    std: [0.1, 0.1]   # Smaller standard deviation for tighter concentration around top-left
   
   # Curriculum Learning Options
   stage_training:
-    enabled: true
+    enabled: false
     num_stages: 8
     
     # Global curriculum controls
