--- a/Further_testing/Agent_Storage/WindowSizing/size_3/config.yaml
+++ b/Further_testing/Agent_Storage/WindowSizing/size_3/config.yaml
@@ -17,7 +17,7 @@ experiment:
     model_save_path: "default_agent"
     
     # Total timesteps remains important
-    total_timesteps: 10_000_000
+    total_timesteps: 5_000_000
 
 # ===== Environment Configuration =====
 environment:
@@ -35,7 +35,7 @@ reward_function:
   transition_width: 10  # Only used for sigmoid function
   verbose: false  # Controls whether basic information is printed to terminal
   debug_logging: false  # Controls whether detailed step-by-step logs are printed
-  count_lava_steps: true  # Whether to count lava steps with a penalty
+  count_lava_steps: false  # Whether to count lava steps with a penalty
   lava_step_multiplier: 5.0  # How many regular steps one lava step is equivalent to
 
 # ===== Randomness Control =====
@@ -47,9 +47,9 @@ seeds:
 
 # ===== Agent Safety Features =====
 no_death:
-  enabled: false
+  enabled: true
   types: ["lava"]
-  cost: -0.0   # Penalty for hitting death elements
+  cost: -0.1   # Penalty for hitting death elements
 
 # ===== Diagonal Movement =====
 diagonal_moves:
@@ -167,7 +167,7 @@ spawn:
 
 # ===== Observation Configuration =====
 observation:
-  window_size: 7  # Size of the observation window
+  window_size: 3  # Size of the observation window
   # Choose which observation features to use
   cnn_keys: []
   mlp_keys: ["four_way_goal_direction", "four_way_angle_alignment", "barrier_mask", "lava_mask"]
