--- a/Further_testing/Build_Files/environment.yml
+++ b/Further_testing/Build_Files/environment.yml
@@ -96,6 +96,7 @@ dependencies:
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.0
       - pytz==2025.2
+      - rustworkx==0.16.0
       - scipy==1.15.2
       - seaborn==0.13.2
       - six==1.17.0
