New metrics introduced - need to check validity

--- a/Further_testing/Agent_Storage/Hyperparameters/optuna_config.yaml
+++ b/Further_testing/Agent_Storage/Hyperparameters/optuna_config.yaml
@@ -9,8 +9,8 @@ bayesian_optimization:
   # Core DQN Parameters
   "model.buffer_size":
     distribution: "int_uniform"
-    min: 50000
-    max: 1000000
+    min: 10000
+    max: 500000
   
   "model.learning_starts":
     distribution: "int_uniform"
