--- a/Further_testing/Agent_Storage/Hyperparameters/optimization_20250529_002854/trial_0_20250529_002854/agent_1/config.yaml
+++ b/Further_testing/Agent_Storage/Hyperparameters/optimization_20250529_002854/trial_0_20250529_002854/agent_1/config.yaml
@@ -30,10 +30,10 @@ experiment:
     total_timesteps: 1000000
   version: 1.0
 model:
-  batch_size: 48
-  buffer_size: 290954
-  exploration_final_eps: 0.09009216073586862
-  exploration_fraction: 0.7384749506482221
+  batch_size: 58
+  buffer_size: 289804
+  exploration_final_eps: 0.012540081344521468
+  exploration_fraction: 0.4457210044289323
   features_extractor:
     class: CustomCombinedExtractor
     cnn:
@@ -51,12 +51,12 @@ model:
       hidden_sizes:
       - 64
       num_layers: 1
-  gamma: 0.9835964407859402
-  learning_rate: 0.0004749430033451706
-  learning_starts: 98887
+  gamma: 0.9205971917861941
+  learning_rate: 1.0920942037890163e-05
+  learning_starts: 7555
   policy: MultiInputPolicy
-  target_update_interval: 2941
-  train_freq: 52
+  target_update_interval: 1243
+  train_freq: 32
   type: DQN
   use_mps: false
   verbose: 1
