Metric config for optimisation sorted

--- a/Optimisation_Formulation/GradBasedTooling/sample_config.json
+++ b/Optimisation_Formulation/GradBasedTooling/sample_config.json
@@ -4,6 +4,8 @@
     "preserve_samples": 10,
     "weights_per_neuron": 64,
     "margin": 0.05,
+    "lambda_sparse": 0.0,
+    "lambda_magnitude": 0.0,
     "max_iterations": 100,
     "optimizer_method": "Powell",
     "bounds": null,
